--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,7 +15,7 @@ ENV \
 #   https://github.com/jellyfin/jellyfin/blob/master/Dockerfile
 RUN \
     echo "**** Install build dependencies requirements ****" \
-        && apt-get update \
+        && apt-get update -y \
         && apt-get install -y \
             ca-certificates \
             curl \
