--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/cache@v4.1.2
         with:
           path: .last_synced_release
-          key: ${{ steps.get_latest.outputs.last }}
+          key: ${{ steps.get_latest.outputs.last }} || echo "none"
 
   sync-upstream:
     needs: check-upstream
