--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -67,19 +67,24 @@ jobs:
       - name: Generate release info
         id: release-info
         run: |
+          # Fetch the latest release data
           release_data=$(curl -s https://api.github.com/repos/Unmanic/unmanic/releases/latest)
+          
+          # Compact the JSON for easier processing
           release_data_compact=$(echo "$release_data" | jq -c)
-          # Extract fields
+          
+          # Extract tag_name
           tag_name=$(echo "$release_data_compact" | jq -r .tag_name)
           echo "tag_name=$tag_name" >> $GITHUB_STATE
           
-          # Extract the release_name
+          # Extract release_name
           release_name=$(echo "$release_data_compact" | jq -r .name)
           echo "release_name=$release_name" >> $GITHUB_STATE
           
-          # Extract the body, handling any special formatting
-          body=$(echo "$release_data_compact" | jq -r .body)
+          # Extract and JSON-encode body
+          body=$(echo "$release_data_compact" | jq -r .body | jq -R '@json')
           echo "body=$body" >> $GITHUB_STATE
+
 
       # Create Release
       - name: Create Release
