--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -82,8 +82,8 @@ jobs:
           echo "release_name=$release_name" >> $GITHUB_STATE
           
           # Extract and JSON-encode body
-          body=$(echo "$release_data_compact" | jq -r .body | jq -R '@json')
-          echo "body=$body" >> $GITHUB_STATE
+          body=$(echo "$release_data_compact" | jq -r .body)
+          echo "{body}={$body}" >> $GITHUB_STATE
 
 
       # Create Release
