--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -81,6 +81,8 @@ jobs:
           release_name=$(echo "$release_data_compact" | jq -r .name)
           echo "release_name=$release_name" >> $GITHUB_STATE
 
+          echo $tag_name
+          echo $release_name
 
       # Create Release
       - name: Create Release
